--- a/about.html
+++ b/about.html
@@ -2,26 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="About the JovarkOS Development Team. JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!" />
-    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham" />
+        content="About the JovarkOS Development Team. JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!">
+    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham">
     <title>JovarkOS - About</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- FontAwesome 5.15.3 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" defer />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <!-- (Optional) Use CSS or JS implementation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="canonical" href="https://jovarkos.org/contact.html">
 
 </head>
@@ -78,8 +78,9 @@
         <section class="py-5 bg-light" id="scroll-target">
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/jovarkos-settings.png"
-                            alt="..." /></div>
+                    <div class="col-lg-6">
+                        <img class="img-fluid rounded mb-5 mb-lg-0" src="assets/jovarkos-settings.png" alt="...">
+                    </div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Our History</h2>
                         <p class="lead fw-normal text-muted mb-0">JovarkOS used to be based on the latest version of
@@ -94,7 +95,8 @@
             <div class="container px-5 my-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0"
-                            src="assets/gaming.png" alt="..." /></div>
+                            src="assets/gaming.png" alt="...">
+                    </div>
                     <div class="col-lg-6">
                         <h2 class="fw-bolder">Why a new distro?</h2>
                         <p class="lead fw-normal text-muted mb-0">Linux users like choices. We give you plenty of
@@ -117,7 +119,7 @@
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/profile.jpg"
-                                alt="Lucas Burlingham's GitHub Profile Picture" loading="lazy" />
+                                alt="Lucas Burlingham's GitHub Profile Picture" loading="lazy">
                             <h5 class="fw-bolder">Lucas Burlingham</h5>
                             <div class="fst-italic text-muted">Founder &amp; Head of Development</div>
                         </div>
@@ -126,7 +128,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://avatars.githubusercontent.com/u/53598550?v=4"
-                                alt="cliffniff's GitHub Profile picture" loading="lazy" />
+                                alt="cliffniff's GitHub Profile picture" loading="lazy">
                             <h5 class="fw-bolder">cliffniff</h5>
                             <div class="fst-italic text-muted">Freelance Developer</div>
                         </div>
@@ -134,7 +136,7 @@
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/amoldybuffalo.png"
-                                alt="AmoldyBuffalo's GitHub Profile picture" loading="lazy" />
+                                alt="AmoldyBuffalo's GitHub Profile picture" loading="lazy">
                             <h5 class="fw-bolder">AmoldyBuffalo</h5>
                             <div class="fst-italic text-muted">Student &amp; Youtuber</div>
                         </div>
@@ -142,7 +144,7 @@
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4" src="assets/entity.png"
-                                alt="Capybara as a profile picture" loading="lazy" />
+                                alt="Capybara as a profile picture" loading="lazy">
                             <h5 class="fw-bolder">Entity</h5>
                             <div class="fst-italic text-muted">Student</div>
                         </div>
@@ -151,7 +153,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
-                                alt="Generic Profile picture" loading="lazy" />
+                                alt="Generic Profile picture" loading="lazy">
                             <h5 class="fw-bolder">lyiriyah</h5>
                             <div class="fst-italic text-muted"><a href="https://tilde.club/~lyiriyah/" target="_blank"
                                     rel="noopener nofollow noreferrer">https://tilde.club/~lyiriyah/</a></div>
@@ -161,7 +163,7 @@
                         <div class="text-center">
                             <img class="img-fluid rounded-circle mb-4 px-4"
                                 src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
-                                alt="Generic Profile picture" loading="lazy" />
+                                alt="Generic Profile picture" loading="lazy">
                             <h5 class="fw-bolder">starship-boi</h5>
                             <div class="fst-italic text-muted">Front-end Web Developer and Student</div>
                         </div>
@@ -171,13 +173,14 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4"
                                     src="https://d1ras9cbx5uamo.cloudfront.net/eyJidWNrZXQiOiAiY29tLm51bWVyYWRlIiwgImtleSI6ICJpbnN0cnVjdG9ycy9mOWNiZWM2ODI3NjE0MTBmOGM5OWNlYjUwYTc0MGY3MC5wbmciLCAiZWRpdHMiOiB7InJlc2l6ZSI6IHsid2lkdGgiOiAyNTYsICJoZWlnaHQiOiAyNTZ9fX0="
-                                    alt="Generic Profile picture" loading="lazy" />
+                                    alt="Generic Profile picture" loading="lazy">
                                 <h5 class="fw-bolder">You</h5>
                                 <div class="fst-italic text-muted"><a href="contact.html">Join us today!</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
     </main>
     <!-- Footer-->
@@ -189,11 +192,15 @@
                             class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -204,8 +211,9 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async>
+
+    </script>
 </body>
 
 </html>
