--- a/download.html
+++ b/download.html
@@ -2,25 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <title>JovarkOS Download</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- FontAwesome 5.15.3 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <!-- (Optional) Use CSS or JS implementation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="canonical" href="https://jovarkos.org/download.html">
 
 </head>
@@ -115,7 +115,7 @@
                     </div>
 
                     <!-- Pricing card pay what you want-->
-                    <div class="col-lg-6 col-xl-4">
+                    <!-- <div class="col-lg-6 col-xl-4">
                         <div class="card">
                             <div class="card-body p-5">
                                 <div class="small text-uppercase fw-bold text-muted">Donor</div>
@@ -136,14 +136,15 @@
                                         Beta release
                                     </li>
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-outline-primary"
+                                <div class="d-grid">
+                                    <a class="btn btn-outline-primary"
                                         href="https://www.paypal.com/donate?hosted_button_id=LUVK5HF3NWXK2"
                                         onclick="sendWebhook('PayPal clicked')" disabled>Donate before download <i
                                             class="fab fa-paypal"></i></a>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -157,11 +158,15 @@
                             class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -172,8 +177,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
