--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!" />
-    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham" />
+        content="JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!">
+    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham">
     <title>JovarkOS Home</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <!-- FontAwesome 5.15.3 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" defer />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- (Optional) Use CSS or JS implementation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="canonical" href="https://jovarkos.org/index.html" />
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="canonical" href="https://jovarkos.org/index.html">
     <script async defer data-website-id="7b3e62b6-b48c-442d-b8b6-775fc5442707"
         src="https://repo.jovarkos.org:3000/umami.js"></script>
 
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"
-                            src="assets/jovarkos-desktop.jpg" alt="..." />
+                            src="assets/jovarkos-desktop.jpg" alt="...">
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                                 something we all love - GNU/Linux."</div>
                             <div class="d-flex align-items-center justify-content-center">
                                 <img class="rounded-circle me-3 w-25 p-3" src="assets/profile.jpg" loading="lazy"
-                                    alt="Lucas Burlingham's Profile Picture" />
+                                    alt="Lucas Burlingham's Profile Picture">
                                 <div class="fw-bold">
                                     Lucas Burlingham
                                     <span class="fw-bold text-primary mx-1">/</span>
@@ -184,10 +184,11 @@
                         <div class="ms-xl-4">
                             <div class="input-group mb-2">
                                 <input class="form-control" type="text" placeholder="Your email here..."
-                                    aria-label="Email address..." aria-describedby="button-newsletter" id="email" />
-                                <button class="btn btn-outline-light" id="confirmation-text button-newsletter"
-                                    type="button" onclick="getEmail();"><span id="confirmation-text">Sign
-                                        up</span></button>
+                                    aria-label="Email address..." aria-describedby="button-newsletter" id="email">
+                                <button class="btn btn-outline-light" id="confirmation-button" type="button"
+                                    onclick="getEmail();">
+                                    <span id="button-newsletter">Sign up</span>
+                                </button>
                             </div>
                             <div class="small text-white-50 disabled">We care about privacy, and will never share your
                                 data.
@@ -207,11 +208,15 @@
                             class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -222,8 +227,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
