--- a/screenshots.html
+++ b/screenshots.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!" />
-    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham" />
+        content="JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!">
+    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham">
     <title>JovarkOS - Screenshots</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/custom.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
     <link rel="canonical" href="https://jovarkos.org/screenshots.html">
 
 
@@ -61,15 +61,15 @@
                     <div class="col-lg-6">
                         <div class="position-relative mb-5">
                             <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/gaming.png" alt="..."
-                                loading="lazy" />
+                                loading="lazy">
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://supertuxkart.net/Main_Page">SuperTuxKart</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="position-relative mb-5">
-                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/system monitor.png" alt="..."
-                                loading="lazy" />
+                            <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/system_monitor.png" alt="..."
+                                loading="lazy">
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://apps.gnome.org">GNOME System
                                 Monitor</a>
@@ -78,7 +78,7 @@
                     <div class="col-lg-6">
                         <div class="position-relative mb-5 mb-lg-0">
                             <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/Vivaldi.png" alt="..."
-                                loading="lazy" />
+                                loading="lazy">
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://vivaldi.com">Vivaldi
                                 Browser</a>
@@ -87,7 +87,7 @@
                     <div class="col-lg-6">
                         <div class="position-relative">
                             <img class="img-fluid rounded-3 mb-3 hover-effect" src="assets/GNOME.png" alt="..."
-                                loading="lazy" />
+                                loading="lazy">
                             <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"
                                 href="https://forty.gnome.org">GNOME 40
                                 <span class="text-muted fw-light fs-5">.4</span></a>
@@ -110,14 +110,19 @@
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                 <div class="col-auto">
                     <div class="small m-0 text-white">Copyright &copy; JovarkOS Development Team 2023 <span
-                            class="text-muted">Site Licensed under MIT</span> </div>
+                            class="text-muted">Site Licensed under MIT</span>
+                    </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -128,8 +133,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
