--- a/thanks.html
+++ b/thanks.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-        content="Contact the JovarkOS Development Team. JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!" />
-    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham" />
+        content="Contact the JovarkOS Development Team. JovarkOS is an Arch-based GNU/Linux distribution offering stability, usability, and speed, in that order. Join us today!">
+    <meta name="author" content="JovarkOS Development Team, Lucas Burlingham">
     <title>JovarkOS - Download</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <!-- FontAwesome 5.15.3 CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <!-- (Optional) Use CSS or JS implementation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet">
     <link rel="canonical" href="https://jovarkos.org/thanks.html">
 </head>
 
@@ -79,7 +79,7 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text">Fun and informational server for JovarkOS</p>
-                                        <button href="#" class="btn btn-outline-primary card-link" disabled>Join!
+                                        <button class="btn btn-outline-primary card-link" disabled>Join!
                                             (Coming Soon!)</button>
                                     </div>
                                 </div>
@@ -92,9 +92,9 @@
                                     </div>
                                     <div class="card-body">
                                         <br>
-                                        <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/"
-                                            type="button">Our
-                                            Profile</a>
+                                        <a class="btn btn-outline-primary" href="https://twitter.com/jovarkos/">\
+                                            Our Profile
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -127,11 +127,15 @@
                             class="text-muted">Site Licensed under MIT</span> </div>
                 </div>
                 <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
+                    <a class="text-muted link-light small no-select" href="#!" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        title="Official document coming soon, but in the meantime, we don't collect any data from you and don't accept responsibility for any situations created from the use of our program.">Terms</a>
                     <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
+                    <a class="link-light small" href="contact.html">Contact</a>
                 </div>
             </div>
         </div>
@@ -142,8 +146,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script data-goatcounter="https://jovarkos.goatcounter.com/count" src="js/scripts.js"></script>
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+    <script src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 
 </html>
